--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -28,7 +28,9 @@
                 <td>{{ atelier.heure ? atelier.heure : '' }}</td>
                 <td>
                     <a href="{{ path('app_atelier_show', {'id': atelier.id}) }}">show</a>
-                    <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}">edit</a>
+                    {% if is_granted('ROLE_ADMIN')%}
+                        <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -38,6 +40,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_atelier_new') }}">Create new</a>
+    {% if is_granted('ROLE_ADMIN')%}
+        <a href="{{ path('app_atelier_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
