ajout de la page profil

--- a/templates/atelier/show.html.twig
+++ b/templates/atelier/show.html.twig
@@ -29,6 +29,10 @@
                 <th>Date_atelier</th>
                 <td>{{ atelier.dateAtelier ? atelier.dateAtelier|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
+            <tr>
+                <th>Heure</th>
+                <td>{{ atelier.heure ? atelier.heure : '' }}</td>
+            </tr>
         </tbody>
     </table>
 
